refactor: replace deprecated toList() with collect(Collectors.toList()) in MovieMapper